@@ -137,3 +137,9 @@ ksp {
     // kotlin-inject-anvil (requires 0.0.3+)
     arg("kotlin-inject-anvil-contributing-annotations", "com.slack.circuit.codegen.annotations.CircuitInject")
 }
+
+// Enable dynamic agent loading for tests needed by MockK
+// https://github.com/hossain-khan/android-trmnl-display/pull/106#issuecomment-2826350990
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
